name:                cloben
version:             0.1.0.0
synopsis:            Clone and benchmark Haskell git repositories
description:         Shell script to clone git repositories and transform
                     benchmark data into a format readable by gipeda
homepage:            http://github.com/sgraf812/cloben#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2015 Sebastian Graf
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable pubelo
  hs-source-dirs:      .
  main-is:             cloben.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    turtle >= 1.2.4 && < 1.3,
    system-filepath >= 0.4.13.4 && < 0.5,
    text >= 1.2.2.0,
    temporary >= 1.2.0.3 && < 1.3
