name:                cloben
version:             0.1.0.0
synopsis:            Clone and benchmark Haskell git repositories
description:         Shell script to clone git repositories and transform
                     benchmark data into a format readable by gipeda
homepage:            http://github.com/sgraf812/cloben#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2015 Sebastian Graf
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable cloben
  hs-source-dirs:      .
  main-is:             cloben.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    turtle < 1.3,
    foldl < 2.0,
    system-filepath >= 0.3.1 && < 0.5,
    text < 1.3,
    temporary >= 1.1 && < 1.3,
    process >= 1.1.0.0 && < 1.5

source-repository head
  type: git
  location: https://github.com/sgraf812/cloben.git
